--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcome to Car Munich</h1>
 <h2>Your source for used cars in Munich</h2>
 <p>Welcome! The date and time is <%= Time.now %></p>
+
+<%= image_tag("car.gif", class: "img-car") %>
