--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -2,4 +2,4 @@
 <h2>Your source for used cars in Munich</h2>
 <p>Welcome! The date and time is <%= Time.now %></p>
 
-<%= image_tag("car.gif", class: "img-car") %>
+<%= image_tag("car.gif", class: "img-responsive") %>
